--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,9 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyDMHXagmaTNyLjFIBSiQEqpi3NddA8c0Oc
+
+
 REACT_APP_FIREBASE_AUTH_DOMAIN=todo-bdef2.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=todo-bdef2
 REACT_APP_FIREBASE_STORAGE_BUCKET=todo-bdef2.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=59835851388
 REACT_APP_FIREBASE_APP_ID=1:59835851388:web:b14fa058f02c283b8d5ff9
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-BNMBC86226
+# REACT_APP_FIREBASE_MEASUREMENT_ID=G-BNMBC86226  
+REACT_APP_FIREBASE_APIKEY=AIzaSyDMHXagmaTNyLjFIBSiQEqpi3NddA8c0Oc
